fixed bug where teams with long names would cause misalignment

--- a/PuckdropClient/src/app/game-page/game-page.component.scss
+++ b/PuckdropClient/src/app/game-page/game-page.component.scss
@@ -30,14 +30,16 @@
     
         .side-block {
             display: flex;
+            flex: 1 1 0px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             margin: 0px 2rem 0px 2rem;
-
+            
             .team-name {
-                font-size: 1.8rem;
+                font-size: 1.25rem;
                 text-align: center;
+                margin: 0rem;
             }
     
             .team-logo {
@@ -58,7 +60,7 @@
         }
     
         .center-block {
-            margin: 4rem;
+            margin: 2rem;
             font-size: 4rem;
             text-align: center;
         }
